--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "start": "node server.js",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "ng build --output-path dist"
   },
   "private": true,
   "dependencies": {
