--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.1.0",
     "@angular/cli": "~6.1.4",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.0",
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
+    "@angular/material": "^7.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
@@ -28,6 +30,7 @@
     "core-js": "^2.5.4",
     "enhanced-resolve": "^4.1.0",
     "express": "^4.16.4",
+    "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "^6.0.0",
     "typescript": "~2.7.2",
