--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^7.1.0",
+    "@angular/cdk": "^7.3.5",
     "@angular/cli": "~6.1.4",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
@@ -21,23 +21,23 @@
     "@angular/core": "^6.1.0",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
-    "@angular/material": "^7.1.0",
+    "@angular/material": "^7.3.5",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "bootstrap": "^4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "enhanced-resolve": "^4.1.0",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "typescript": "~2.7.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular-devkit/build-angular": "^0.7.5",
     "@angular/cli": "~6.1.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
